@@ -1,25 +1,18 @@
 package web.mjob.services.impl;
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.PersistenceContext;
 import jakarta.transaction.Transactional;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import web.mjob.exceptions.NotFoundException;
-import web.mjob.models.dto.DokumentSadrzaj;
 import web.mjob.models.dto.Korisnik;
 import web.mjob.models.dto.Oglas;
 import web.mjob.models.dto.Request;
 import web.mjob.models.entities.*;
 import web.mjob.repositories.*;
+import web.mjob.services.EmailService;
 import web.mjob.services.KorisnikService;
-
-import javax.persistence.criteria.CriteriaBuilder;
-import java.io.FileInputStream;
-import java.io.InputStream;
 import java.sql.Timestamp;
-import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -34,11 +27,15 @@ public class KorisnikServiceImpl implements KorisnikService {
     public  final DokumentSadrzajRepository dokumentSadrzajRepository;
     public  final KorisnikStatusEntityRepository korisnikStatusRepository;
     private final KorisnikPrijavljenRepository korisnikPrijavljenRepository;
-    private  final OglasRepository oglasRepository;
     private final ModelMapper mapper;
-    @PersistenceContext
-    private EntityManager manager;
-    public KorisnikServiceImpl(KorisnikEntityRepository repository,OglasRepository oglasRepository,KorisnikPrijavljenRepository korisnikPrijavljenRepository,DokumentSadrzajRepository dokumentSadrzajRepository,KorisnikStatusEntityRepository korisnikStatusRepository, KorisnikDokumentEntityRepository korisnikDokumentEntityRepository,ModelMapper modelMapper)
+    private final EmailService emailService;
+    public KorisnikServiceImpl(KorisnikEntityRepository repository,
+                               KorisnikPrijavljenRepository korisnikPrijavljenRepository,
+                               DokumentSadrzajRepository dokumentSadrzajRepository,
+                               KorisnikStatusEntityRepository korisnikStatusRepository,
+                               KorisnikDokumentEntityRepository korisnikDokumentEntityRepository,
+                               ModelMapper modelMapper,
+                               EmailService emailService)
     {
         this.repository = repository;
         this.mapper=modelMapper;
@@ -46,7 +43,7 @@ public class KorisnikServiceImpl implements KorisnikService {
         this.korisnikDokumentEntityRepository=korisnikDokumentEntityRepository;
         this.korisnikStatusRepository=korisnikStatusRepository;
         this.korisnikPrijavljenRepository=korisnikPrijavljenRepository;
-        this.oglasRepository=oglasRepository;
+        this.emailService=emailService;
     }
 
     @Override
@@ -67,14 +64,14 @@ public class KorisnikServiceImpl implements KorisnikService {
         List<KorisnikPrijavljenEntity> oglasi=korisnikPrijavljenRepository.findKorisnikPrijavljenEntitiesByKorisnikByKorisnikId(korisnik);
 
         List<OglasEntity> oglasEntities=new ArrayList<>();
-        for (KorisnikPrijavljenEntity oglas:oglasi.stream().filter(o->o.getOdobren()==true).collect(Collectors.toList())) {
+        for (KorisnikPrijavljenEntity oglas: oglasi.stream().filter(KorisnikPrijavljenEntity::getOdobren).toList()) {
             oglasEntities.add(oglas.getOglasByOglasId());
         }
         return oglasEntities.stream().map(e->mapper.map(e,Oglas.class)).collect(Collectors.toList());
     }
 
     @Override
-    public void acceptRegistration(Long id, Integer brojClanskeKarte)throws NotFoundException
+    public void acceptRegistration(Long id, Integer brojClanskeKarte)
     {
         KorisnikEntity korisnik=repository.findKorisnikEntityById(id);
         korisnik.setDatumUclanjenja(new Timestamp(new Date().getTime()));
@@ -82,30 +79,34 @@ public class KorisnikServiceImpl implements KorisnikService {
         korisnik.setKorisnikStatusId(status);
         korisnik.setBrojClanskeKarte(brojClanskeKarte);
         korisnik = repository.saveAndFlush(korisnik);
+        emailService.sendSimpleMailApproved(korisnik.getEmail(),brojClanskeKarte);
     }
     @Override
-    public void refuseRegistration(Long id) throws NotFoundException
+    public void refuseRegistration(Long id)
     {
         KorisnikEntity korisnik=repository.findKorisnikEntityById(id);
         KorisnikStatusEntity status= korisnikStatusRepository.findKorisnikStatusEntityByNaziv("odbijen");
         korisnik.setKorisnikStatusId(status);
         repository.saveAndFlush(korisnik);
+        emailService.sendSimpleMailNotApproved(korisnik.getEmail());
     }
     @Override
-    public void deleteAccount(Long id) throws NotFoundException
+    public void deleteAccount(Long id)
     {
         KorisnikEntity korisnik=repository.findKorisnikEntityById(id);
         KorisnikStatusEntity status= korisnikStatusRepository.findKorisnikStatusEntityByNaziv("obrisan");
         korisnik.setKorisnikStatusId(status);
         repository.saveAndFlush(korisnik);
+        emailService.sendSimpleMailDeleted(korisnik.getEmail());
     }
     @Override
-    public void reactivateUser(Long id) throws NotFoundException
+    public void reactivateUser(Long id)
     {
         KorisnikEntity korisnik=repository.findKorisnikEntityById(id);
         KorisnikStatusEntity status= korisnikStatusRepository.findKorisnikStatusEntityByNaziv("aktivan");
         korisnik.setKorisnikStatusId(status);
         korisnik = repository.saveAndFlush(korisnik);
+        emailService.sendSimpleMailAboutReactivation(korisnik.getEmail());
     }
     @Override
     public <T> List<T> findAll(Class<T> resultDtoClass) throws NotFoundException {
